--- a/xcconfigTutorial/Info.plist
+++ b/xcconfigTutorial/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>SAMPLE_API_KEY</key>
-	<string>28649836sjdbs28263</string>
+	<string>$(SAMPLE_API_KEY)</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
